run build and test on nscloud

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,11 @@ jobs:
   build:
     name: "Build"
     timeout-minutes: 30
-    runs-on: ubuntu-latest
+    runs-on:
+      - nscloud-ubuntu-22.04-amd64-8x16-with-cache
+      - nscloud-exp-runner-tool-cache-50gb
+      - nscloud-cache-size-50gb
+      - nscloud-cache-tag-gha-demo-wing
     outputs:
       version: ${{ fromJson(steps.changelog.outputs.data).newVersion }}
       last-version: ${{ fromJson(steps.changelog.outputs.data).lastVersion }}
@@ -62,11 +66,14 @@ jobs:
           inherit-toolchain: true
           cache: false
 
-      - name: Setup Cargo Cache
-        uses: Swatinem/rust-cache@v2
+      - name: Setup runner cache
+        uses: namespacelabs/nscloud-cache-action@v1
         with:
-          # Don't save cache here, to avoid thrashing with test job
-          save-if: false
+          path: |
+            ~/.npm
+            ./node_modules
+            ~/.cargo
+            ./target
 
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
@@ -99,7 +106,11 @@ jobs:
   test:
     name: Test
     timeout-minutes: 30
-    runs-on: ubuntu-latest
+    runs-on:
+      - nscloud-ubuntu-22.04-amd64-8x16-with-cache
+      - nscloud-exp-runner-tool-cache-50gb
+      - nscloud-cache-size-50gb
+      - nscloud-cache-tag-gha-demo-wing
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -121,8 +132,14 @@ jobs:
           inherit-toolchain: true
           cache: false
 
-      - name: Setup Cargo Cache
-        uses: Swatinem/rust-cache@v2
+      - name: Setup runner cache
+        uses: namespacelabs/nscloud-cache-action@v1
+        with:
+          path: |
+            ~/.npm
+            ./node_modules
+            ~/.cargo
+            ./target
 
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
@@ -148,7 +165,11 @@ jobs:
   benchmark:
     name: Benchmark
     if: needs.build.outputs.bench-changed == 'true' || contains(github.event.pull_request.labels.*.name, '🧪 pr/e2e-full')
-    runs-on: ubuntu-latest
+    runs-on:
+      - nscloud-ubuntu-22.04-amd64-8x16-with-cache
+      - nscloud-exp-runner-tool-cache-50gb
+      - nscloud-cache-size-50gb
+      - nscloud-cache-tag-gha-demo-wing
     needs:
       - build
     steps:
