--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -128,6 +128,8 @@ jobs:
       - name: Setup Cargo Cache
         uses: Swatinem/rust-cache@v2
 
+      - uses: hashicorp/setup-terraform@v2
+
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
